--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>AWX</title>
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" type="text/css" href="css/layout.css" />
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
