--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<title>AWX</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/layout.css" />
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
