--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="js/jquery.awx.js" type="text/javascript"></script>
   <script src="js/awx.js" type="text/javascript"></script>
   <script src="js/jQueryRotateCompressed.2.2.js" type="text/javascript"></script>
+  <script src="js/jed.js" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function() {
       awx.init();
